compile_errors.txt
Listing 'src/infraestructura/persistencia/'...
Compiling 'src/infraestructura/persistencia/repositorio_arrendatario_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_arrendatario_sqlite.py, line 71)
Compiling 'src/infraestructura/persistencia/repositorio_auditoria_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_auditoria_sqlite.py, line 70)
Compiling 'src/infraestructura/persistencia/repositorio_codeudor_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_codeudor_sqlite.py, line 66)
Compiling 'src/infraestructura/persistencia/repositorio_contrato_arrendamiento_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_contrato_arrendamiento_sqlite.py, line 46)
Compiling 'src/infraestructura/persistencia/repositorio_contrato_mandato_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_contrato_mandato_sqlite.py, line 44)
Compiling 'src/infraestructura/persistencia/repositorio_incidentes_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_incidentes_sqlite.py, line 128)
Compiling 'src/infraestructura/persistencia/repositorio_ipc_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_ipc_sqlite.py, line 66)
Compiling 'src/infraestructura/persistencia/repositorio_liquidacion_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_liquidacion_sqlite.py, line 199)
Compiling 'src/infraestructura/persistencia/repositorio_municipio_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_municipio_sqlite.py, line 65)
Compiling 'src/infraestructura/persistencia/repositorio_parametro_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_parametro_sqlite.py, line 69)
Compiling 'src/infraestructura/persistencia/repositorio_poliza_sqlite.py'...
***   File "src/infraestructura/persistencia/repositorio_poliza_sqlite.py", line 118
    if row is None:
                  ^
SyntaxError: invalid syntax

Compiling 'src/infraestructura/persistencia/repositorio_propiedad_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_propiedad_sqlite.py, line 91)
Compiling 'src/infraestructura/persistencia/repositorio_propietario_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_propietario_sqlite.py, line 72)
Compiling 'src/infraestructura/persistencia/repositorio_proveedores_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_proveedores_sqlite.py, line 58)
Compiling 'src/infraestructura/persistencia/repositorio_recaudo_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_recaudo_sqlite.py, line 177)
Compiling 'src/infraestructura/persistencia/repositorio_renovacion_sqlite.py'...
*** Sorry: IndentationError: unexpected indent (src/infraestructura/persistencia/repositorio_renovacion_sqlite.py, line 57)
